# ConsoleApp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .history  errors.py  main.py
src/commands/: cat.py  cd.py  command_registrator.py  cp.py  grep.py  history.py  ls.py  mv.py  rm.py  tar.py  undo.py  zip.py
src/common/: config.py
src/dependencies/: container.py
src/enums/: archive_format.py
src/services/: base.py  history_service.py  init_services.py  linux_console.py  macos_console.py
tests/: conftest.py  test_history.py  test_linux_console.py
